add configuration to check for local SCM changes

--- a/src/main/webapp/help.html
+++ b/src/main/webapp/help.html
@@ -13,6 +13,7 @@
   		<li>ABORTED</li>
   	</ul>
   	</li>
-  	<li>SCM changes: only triggers if the other project has SCM changes since its last build.</li>
+  	<li>Downstream SCM changes: only triggers if the other project has SCM changes since its last build.</li>
+  	<li>Local SCM changes: only triggers if the current project has SCM changes since its last build.</li>
   </ul>
 </div>
